# EAG-V1

S7/: pyproject.toml  requirements.txt
S7/chromePlugin/: background.js  content.js  popup.html  popup.js
S7/faiss_index/: metadata.json
S7/src/: agent.py  api.py  memory.py  perception.py
S7/src/faiss_index/: doc_index_cache.json  metadata.json
assignment-4/: README.md  example2-3.py  requirements.txt  talk2mcp-2.py
assignment-5/: README.md  llm_logs.txt  talk2mcp-2.py
assignment-5/llm_logs/: llm_logs.txt
assignment-6/: README.md  action.py  cognitive_agent.py  decision_making.py  main.py  mcp_tool.py  memory.py  models.py  perception.py  prompt_of_prompts.md  prompts.py  requirements.txt
assignment-7/: README.md
assignment-7/chromePlugin/: README.md
assignment-7/faiss_index/: metadata.json
assignment-7/src/: api.py  decision.py
assignment-7/src/documents/: cricket.txt
assignment-7/src/faiss_index/: metadata.json
assignment-8/: README.md  pyproject.toml  requirements.txt  sse_client.html  telegram_sse_server.py
assignment-8/chromePlugin/: content.js  manifest.json  popup.html  popup.js
assignment-8/faiss_index/: metadata.json
assignment-8/src/: agent.py  applicationlogs.txt  email_mcp_server.py  example3.py  perception.py  sheets_mcp_server.py  telegram_mcp_server.py
assignment-8/src/faiss_index/: doc_index_cache.json
